fixed gap issue

--- a/app/assets/stylesheets/post.css
+++ b/app/assets/stylesheets/post.css
@@ -10,12 +10,10 @@
   padding: 5px;
   border-color: #424242;
   border-radius: 1em;
+  margin-left: -50px;
 }
 
-.reply-button-form-div
-{
-  padding: 5px;
-}
+
 
 #post-profile{
   width: 100px;
