--- a/app/assets/stylesheets/reply.css
+++ b/app/assets/stylesheets/reply.css
@@ -1,9 +1,11 @@
 .reply-container{
   position: relative;
   left: 20px;
+  margin-left: -50px;
 }
-
 .reply-profile{
+  margin-left: auto;
+  margin-right: auto;
   width: 60px;
   height: 60px;
   border: 1px solid;
@@ -16,4 +18,10 @@
   border: 1px solid;
   border-radius: 1em;
   padding: 3px;
+}
+
+.reply-button-form-div
+{
+  padding: 5px;
+  margin-left: -40px;
 }
